# rshell

./: .gitignore  Cargo.toml  README.md
.nvm/: nvm-exec  nvm.sh
examples/: &&.sh
src/: builtin.rs  command.rs  lib.rs  main.rs
src/lang/: builtin.rs  mod.rs  parser.rs  scanner.rs  tokens.rs
src/lang/parser/: error.rs  mod.rs
src/language/: mod.rs  parser.rs  scanner.rs  tokens.rs
